--- a/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
@@ -19,24 +19,21 @@
                     <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">¿Quiénes Somos?</a>
+                    <a class="nav-link" href="#">Administración de tarjetas</a>
+                </li>
+                <li th:if="${gerente}" class="nav-item">
+                    <a class="nav-link" href="#">Administración de turnos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reservar</a>
+                    <a class="nav-link" href="#">Administración de reservas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ver reservas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Ver Tarjeta</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Club Fun</a>
+                    <a class="nav-link" href="#">Administración de incidencias</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/inicioSesionEmpleado}">Acceso Empleados</a>
+                    <a class="nav-link" th:href="@{/frontend/inicioSesionEmpleado}">Cerrar sesión</a>
                 </li>
             </ul>
         </div>
