--- a/tfg-frontend/src/main/resources/templates/paginas/inicioSesionEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/inicioSesionEmpleado.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 <form th:action="@{/frontend/comprobarEmpleado}" method="post" >
-    <div th:if="${error}" class="alert alert-danger" role="alert">
-        <span th:text="${error}"></span>
+    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
+        <span th:text="${msg}"></span>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <div class="mb-3">
