--- a/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
@@ -16,10 +16,10 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/homeEmpleado}">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Administración de tarjetas</a>
+                    <a class="nav-link" th:href="@{/frontend/tarjetasEmpleado}">Administración de tarjetas</a>
                 </li>
                 <li th:if="${gerente}" class="nav-item">
                     <a class="nav-link" href="#">Administración de turnos</a>
@@ -33,7 +33,7 @@
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/inicioSesionEmpleado}">Cerrar sesión</a>
+                    <a class="nav-link" th:href="@{/frontend/cerrarSesionEmpleado}">Cerrar sesión</a>
                 </li>
             </ul>
         </div>
