--- a/tfg-frontend/src/main/resources/templates/paginas/inicioSesionEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/inicioSesionEmpleado.html
@@ -13,14 +13,14 @@
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" name="correoEmpleado" placeholder="Introduce tu correo de la empresa">
+        <label for="emailEmpleado" class="form-label">Email</label>
+        <input type="email" class="form-control" id="emailEmpleado" name="correoEmpleado" placeholder="Introduce tu correo de la empresa">
     </div>
     <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" name="passwordEmpleado" placeholder="Introduce tu contraseña">
+        <label for="passwordEmpleado" class="form-label">Contraseña</label>
+        <input type="password" class="form-control" id="passwordEmpleado" name="passwordEmpleado" placeholder="Introduce tu contraseña">
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
 </form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
