Progreso del frontend

--- a/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="#">Administración de reservas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Administración de incidencias</a>
+                    <a class="nav-link" th:href="@{/frontend/incidencias}">Administración de incidencias</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
