--- a/tfg-frontend/src/main/resources/templates/home.html
+++ b/tfg-frontend/src/main/resources/templates/home.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="#">Ver reservas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ver Tarjeta</a>
+                    <a class="nav-link" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Club Fun</a>
