--- a/tfg-frontend/src/main/resources/templates/paginas/credencialesTarjetaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/credencialesTarjetaCliente.html
@@ -7,7 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<h1>Hello, world!</h1>
+<form th:action="@{/frontend/comprobarTarjetaCliente}" method="post" >
+    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
+        <span th:text="${msg}"></span>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    <div class="mb-3">
+        <label for="numeroTarjetaCliente" class="form-label">Número de tarjeta</label>
+        <input type="text" class="form-control" id="numeroTarjetaCliente" name="numeroTarjeta" placeholder="Introduce el número de la tarjeta">
+    </div>
+    <div class="mb-3">
+        <label for="pinTarjetaCliente" class="form-label">PIN</label>
+        <input type="password" class="form-control" id="pinTarjetaCliente" name="pinTarjeta" placeholder="Introduce el PIN de la tarjeta">
+    </div>
+    <button type="submit" class="btn btn-primary">Ver Tarjeta</button>
+</form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
