--- a/tfg-frontend/src/main/resources/templates/home.html
+++ b/tfg-frontend/src/main/resources/templates/home.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Club Fun</a>
+                    <a class="nav-link" th:href="@{/frontend/miembroclub}">Club Fun</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
