--- a/tfg-frontend/src/main/resources/templates/home.html
+++ b/tfg-frontend/src/main/resources/templates/home.html
@@ -16,13 +16,13 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/frontend}">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reservar</a>
+                    <a class="nav-link" th:href="@{/frontend/datosReserva}">Reservar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Ver reservas</a>
