--- a/tfg-frontend/src/main/resources/templates/paginas/datosReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/datosReserva.html
@@ -16,19 +16,19 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" th:href="@{/frontend/}">Inicio</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/}">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Reservar</a>
+                    <a class="nav-link" th:href="@{/frontend/datosReserva}">Reservar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Ver reservas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
+                    <a class="nav-link" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/miembroclub}">Club Fun</a>
@@ -42,21 +42,7 @@
         </div>
     </div>
 </nav>
-<form th:action="@{/frontend/comprobarTarjetaCliente}" method="post" >
-    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
-        <span th:text="${msg}"></span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    <div class="mb-3">
-        <label for="numeroTarjetaCliente" class="form-label">Número de tarjeta</label>
-        <input type="text" class="form-control" id="numeroTarjetaCliente" name="numeroTarjeta" placeholder="Introduce el número de la tarjeta">
-    </div>
-    <div class="mb-3">
-        <label for="pinTarjetaCliente" class="form-label">PIN</label>
-        <input type="password" class="form-control" id="pinTarjetaCliente" name="pinTarjeta" placeholder="Introduce el PIN de la tarjeta">
-    </div>
-    <button type="submit" class="btn btn-primary">Ver Tarjeta</button>
-</form>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
