--- a/tfg-frontend/src/main/resources/templates/paginas/datosReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/datosReserva.html
@@ -42,7 +42,27 @@
         </div>
     </div>
 </nav>
-
+    <form th:action="@{/frontend/cargarActividades}" method="post" >
+        <div th:if="${msg != null}" class="alert alert-danger" role="alert">
+            <span th:text="${msg}"></span>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        <div class="mb-3">
+            <label for="numeroPersonasReserva" class="form-label">Número de personas</label>
+            <input type="number" class="form-control" id="numeroPersonasReserva" name="personasReserva" min="1" value="1" step="1">
+        </div>
+        <div class="mb-3">
+            <label for="locales">Selecciona un local:</label>
+            <select id="locales" name="local">
+                <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()}"></option>
+            </select>
+        </div>
+        <div class="mb-3">
+            <label for="fechaDeReserva" class="form-label">Fecha de la reserva</label>
+            <input type="date" class="form-control" id="fechaDeReserva" name="fechaReserva" th:min="${fechaActual}" th:value="${fechaActual}">
+        </div>
+        <button type="submit" class="btn btn-primary">Comprobar actividades</button>
+    </form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
