--- a/tfg-frontend/src/main/resources/templates/home.html
+++ b/tfg-frontend/src/main/resources/templates/home.html
@@ -19,13 +19,13 @@
                     <a class="nav-link active" aria-current="page" th:href="@{/frontend}">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">¿Quiénes Somos?</a>
+                    <a class="nav-link" th:href="@{/frontend/info}">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/datosReserva}">Reservar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ver reservas</a>
+                    <a class="nav-link" th:href="@{/frontend/verReserva}">Ver reservas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
