--- a/tfg-frontend/src/main/resources/templates/paginas/actividadesReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/actividadesReserva.html
@@ -7,6 +7,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/frontend}">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/info}">¿Quiénes Somos?</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/datosReserva}">Reservar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/verReserva}">Ver reservas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/miembroclub}">Club Fun</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/inicioSesionEmpleado}">Acceso Empleados</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <div th:if="${!actividadesElegidas.isEmpty()}">
 <h1 >Reserva actual</h1>
     <table class="table table-hover">
@@ -20,14 +55,19 @@
         <tr th:each="actividad : ${actividadesElegidas}">
             <td th:text="${actividad.value.getNombre()}"></td>
             <td th:text="${actividad.key}"></td>
+            <td>
             <a th:href="@{/frontend/eliminarActividad/{hora}  (hora=${actividad.key})   }" th:text="'eliminar de reserva'" onclick="return confirm('¿Estas seguro?')" class="btn btn-warning" role="button" title="eliminar de la reserva."><i class="fas fa-trash" aria-hidden="true"></i></a>
+            </td>
         </tr>
         </tbody>
     </table>
+    <p>Precio total:</p>
+    <p th:text="${precioTotal}"></p>
     <a th:href="@{/frontend/guardarActividades}" th:text="'guardar y pasar a datos de contacto'" class="btn btn-success" role="button" title="terminar reserva."></a>
 </div>
 <h1>Atracciones y sesiones</h1>
 <div th:each="atraccion : ${sesionesPorAtraccion}">
+    <h2 th:text="${atraccion.key.getNombre()}  + ':' +  ${atraccion.key.getPrecio()}"></h2>
     <ul class="list-group list-group-horizontal">
         <li class="list-group-item" th:each="sesion : ${atraccion.value}">
             <a th:href="@{'/frontend/addActividad/hora=' + ${sesion} + '/atraccion=' + ${atraccion.key.getId()} }"><span th:text="${sesion}"></span></a>
