--- a/tfg-frontend/src/main/resources/templates/paginas/contactoReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/contactoReserva.html
@@ -6,6 +6,41 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/frontend}">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/info}">¿Quiénes Somos?</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/datosReserva}">Reservar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/verReserva}">Ver reservas</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/miembroclub}">Club Fun</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/inicioSesionEmpleado}">Acceso Empleados</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <body>
 <h1 >Reserva actual</h1>
 <table class="table table-hover">
@@ -22,6 +57,32 @@
     </tr>
     </tbody>
 </table>
+<p>Precio total:</p>
+<p th:text="${precioTotal}"></p>
+<h1>Datos de contacto</h1>
+<div th:if="${msg != null}" class="alert alert-success" role="alert">
+    <span th:text="${msg}"></span>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+<form th:action="@{/frontend/guardarReserva}" method="post" >
+    <div class="mb-3">
+        <label for="nombreReservaId" class="form-label">Nombre</label>
+        <input type="text" class="form-control" id="nombreReservaId" name="nombreReserva" placeholder="Introduce tu nombre" required>
+    </div>
+    <div class="mb-3">
+        <label for="telefonoReservaId" class="form-label">Teléfono</label>
+        <input type="tel" class="form-control" id="telefonoReservaId" name="telefonoReserva" placeholder="Introduce tu télefono: NNNNNNNNN" pattern="[0-9]{9}" required>
+    </div>
+    <div class="mb-3">
+        <label for="emailReservaId" class="form-label">Email</label>
+        <input type="email" class="form-control" id="emailReservaId" name="emailReserva" placeholder="Introduce tu email" required>
+    </div>
+    <div class="mb-3">
+        <label for="datosPagoReservaId" class="form-label">Datos de pago</label>
+        <input type="text" class="form-control" id="datosPagoReservaId" name="datosPagoReserva" placeholder="Introduce los datos de pago" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Confirmar reserva</button>
+</form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
