--- a/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/homeEmpleado.html
@@ -22,10 +22,10 @@
                     <a class="nav-link" th:href="@{/frontend/tarjetasEmpleado}">Administración de tarjetas</a>
                 </li>
                 <li th:if="${gerente}" class="nav-item">
-                    <a class="nav-link" href="#">Administración de turnos</a>
+                    <a class="nav-link" th:href="@{/frontend/incidencias}">Administración de turnos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Administración de reservas</a>
+                    <a class="nav-link" th:href="@{/frontend/reservasEmpleado}">Administración de reservas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/incidencias}">Administración de incidencias</a>
