--- a/tfg-frontend/src/main/resources/templates/paginas/contactoReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/contactoReserva.html
@@ -6,6 +6,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+<body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
@@ -15,13 +16,13 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/frontend}">Inicio</a>
+                    <a class="nav-link" aria-current="page" th:href="@{/frontend}">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/info}">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/datosReserva}">Reservar</a>
+                    <a class="nav-link active" th:href="@{/frontend/datosReserva}">Reservar</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/verReserva}">Ver reservas</a>
@@ -41,7 +42,6 @@
         </div>
     </div>
 </nav>
-<body>
 <h1 >Reserva actual</h1>
 <table class="table table-hover">
     <thead class="thead-light">
