--- a/tfg-frontend/src/main/resources/templates/paginas/credencialesReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/credencialesReserva.html
@@ -25,10 +25,10 @@
                     <a class="nav-link" th:href="@{/frontend/datosReserva}">Reservar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/verReserva}">Ver reservas</a>
+                    <a class="nav-link active" th:href="@{/frontend/verReserva}">Ver reservas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
+                    <a class="nav-link" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/miembroclub}">Club Fun</a>
@@ -42,20 +42,20 @@
         </div>
     </div>
 </nav>
-<form th:action="@{/frontend/comprobarTarjetaCliente}" method="post" >
+<form th:action="@{/frontend/comprobarReserva}" method="post" >
     <div th:if="${msg != null}" class="alert alert-danger" role="alert">
         <span th:text="${msg}"></span>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
     <div class="mb-3">
-        <label for="numeroTarjetaCliente" class="form-label">Número de tarjeta</label>
-        <input type="text" class="form-control" id="numeroTarjetaCliente" name="numeroTarjeta" placeholder="Introduce el número de la tarjeta">
+        <label for="idReservaCliente" class="form-label">ID de la reserva</label>
+        <input type="number" class="form-control" id="idReservaCliente" name="idReserva" placeholder="Introduce el ID de la reserva" required>
     </div>
     <div class="mb-3">
-        <label for="pinTarjetaCliente" class="form-label">PIN</label>
-        <input type="password" class="form-control" id="pinTarjetaCliente" name="pinTarjeta" placeholder="Introduce el PIN de la tarjeta">
+        <label for="emailContactoCliente" class="form-label">Email</label>
+        <input type="email" class="form-control" id="emailContactoCliente" name="emailContacto" placeholder="Introduce el correo de contacto" required>
     </div>
-    <button type="submit" class="btn btn-primary">Ver Tarjeta</button>
+    <button type="submit" class="btn btn-primary">Ver Reserva</button>
 </form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
