--- a/tfg-frontend/src/main/resources/templates/paginas/miembroclub.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/miembroclub.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/frontend}">Inicio</a>
+                    <a class="nav-link" aria-current="page" th:href="@{/frontend}">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/info}">¿Quiénes Somos?</a>
@@ -31,7 +31,7 @@
                     <a class="nav-link" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/miembroclub}">Club Fun</a>
+                    <a class="nav-link active" th:href="@{/frontend/miembroclub}">Club Fun</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
