--- a/tfg-frontend/src/main/resources/templates/paginas/reservaCliente.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/reservaCliente.html
@@ -25,10 +25,10 @@
           <a class="nav-link" th:href="@{/frontend/datosReserva}">Reservar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/frontend/verReserva}">Ver reservas</a>
+          <a class="nav-link active" th:href="@{/frontend/verReserva}">Ver reservas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
+          <a class="nav-link" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{/frontend/miembroclub}">Club Fun</a>
@@ -42,25 +42,25 @@
     </div>
   </div>
 </nav>
-<p>Tickets en la tarjeta:</p>
-<p th:text="${tarjeta.saldoTickets}"></p>
-<p>Saldo en la tarjeta:</p>
-<p th:text="${tarjeta.saldoMoneda}"></p>
-<form th:action="@{/frontend/rellenarSaldoTarjeta}" method="post" >
-  <div th:if="${msg != null}" class="alert alert-danger" role="alert">
-    <span th:text="${msg}"></span>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-  </div>
-  <div class="mb-3">
-    <label for="numeroCuentaCliente" class="form-label">Número de cuenta</label>
-    <input type="text" class="form-control" id="numeroCuentaCliente" name="numeroCuenta" placeholder="Introduce el número de cuenta" required>
-  </div>
-  <div class="mb-3">
-    <label for="saldoTarjetaCliente" class="form-label">Saldo a añadir</label>
-    <input type="number" class="form-control" id="saldoTarjetaCliente" name="saldoTarjeta" min="0" value="0" step=".01">
-  </div>
-  <button type="submit" class="btn btn-primary">Añadir saldo</button>
-</form>
+<h1>Datos de la reserva</h1>
+<table class="table table-hover">
+  <thead class="thead-light">
+  <tr>
+    <th scope="col">Actividad</th>
+    <th scope="col">Sesión</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr th:each="actividad : ${actividadesReserva}">
+    <td th:text="${actividad.getAtraccionID().getNombre()}"></td>
+    <td th:text="${actividad.getSesion()}"></td>
+  </tr>
+  </tbody>
+</table>
+<p th:text="'Fecha de la reserva:' + ${reserva.getFechaReserva()} "></p>
+<p th:text="'Lugar de la reserva:' + ${reserva.getSitioID().getCalle()} "></p>
+<p th:text="'Número de personas de la reserva:' + ${reserva.getPersonas()} "></p>
+<a th:href="@{/frontend/eliminarReserva}" th:text="'Cancelar reserva'" onclick="return confirm('¿Estas seguro?')" class="btn btn-warning" role="button" title="eliminar de la reserva."><i class="fas fa-trash" aria-hidden="true"></i></a>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
