Debug - admin de sitios

--- a/debug/src/main/resources/templates/paginas/sitiosForm.html
+++ b/debug/src/main/resources/templates/paginas/sitiosForm.html
@@ -24,7 +24,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/debug/sitiosLista}">Ver sitios</a></li>
-                        <li><a class="dropdown-item" th:href="@{/debug/sitiosCrear}">Crear sitio</a></li>
+                        <li><a class="dropdown-item" href="#">Crear sitio</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -49,10 +49,35 @@
         </div>
     </div>
 </nav>
-<div th:if="${msg != null}" class="alert alert-success" role="alert">
-    <span th:text="${msg}"></span>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
+<h2 th:text="${titulo}"></h2>
+<form th:action="@{/debug/sitiosGuardar}" method="post"  th:object="${sitio}">
+    <div th:if="${msg_pos_guardar != null}" class="alert alert-success" role="alert">
+        <span th:text="${msg_pos_guardar}"></span>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    <div class="mb-3">
+        <label for="calle" class="form-label"> Calle </label>
+        <input type="text" class="form-control" th:field="*{calle}"  id="calle" name="calle" placeholder="Nombre de la calle" required>
+    </div>
+    <div class="mb-3">
+        <label for="numero" class="form-label"> Número </label>
+        <input type="text" class="form-control" th:field="*{numero}"  id="numero" name="numero" placeholder="Número de la calle" pattern="[0-9]{1,}" required>
+    </div>
+    <div class="mb-3">
+        <label for="codigoPostal" class="form-label"> Código Postal </label>
+        <input type="text" class="form-control" th:field="*{codigoPostal}"  id="codigoPostal" name="codigoPostal" placeholder="Código Postal del sitio" pattern="[0-9]{5}" required>
+    </div>
+    <div class="mb-3">
+        <label for="ciudad" class="form-label"> Ciudad </label>
+        <input type="text" class="form-control" th:field="*{ciudad}"  id="ciudad" name="ciudad" placeholder="Ciudad del sitio" required>
+    </div>
+    <div class="mb-3">
+        <label for="provincia" class="form-label"> Provincia </label>
+        <input type="text" class="form-control" th:field="*{provincia}"  id="provincia" name="provincia" placeholder="Provincia del sitio" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <input type="hidden" th:field="*{id}" />
+</form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
