--- a/debug/src/main/resources/templates/paginas/sitiosLista.html
+++ b/debug/src/main/resources/templates/paginas/sitiosLista.html
@@ -24,7 +24,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/debug/sitiosLista}">Ver sitios</a></li>
-                        <li><a class="dropdown-item" th:href="@{/debug/sitiosCrear}">Crear sitio</a></li>
+                        <li><a class="dropdown-item" href="#">Crear sitio</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -49,9 +49,43 @@
         </div>
     </div>
 </nav>
-<div th:if="${msg != null}" class="alert alert-success" role="alert">
-    <span th:text="${msg}"></span>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div class="container">
+    <div class="card">
+        <h2>Sitios</h2>
+        <div class="card-body">
+            <table class="table table-hover">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">ID</th>
+                    <th scope="col">Calle</th>
+                    <th scope="col">Número</th>
+                    <th scope="col">Código Postal</th>
+                    <th scope="col">Ciudad</th>
+                    <th scope="col">Provincia</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="sitio : ${listadoSitios}">
+                    <td th:text="${sitio.id}"></td>
+                    <td th:text="${sitio.calle}"></td>
+                    <td th:text="${sitio.numero}"></td>
+                    <td th:text="${sitio.codigoPostal}"></td>
+                    <td th:text="${sitio.ciudad}"></td>
+                    <td th:text="${sitio.provincia}"></td>
+                    <td>
+                        <a th:href="@{/debug/sitiosEditar/{id}  (id=${sitio.id})   }" th:text="'Editar'" class="btn btn-warning" role="button" title="editar sitio"><i class="fas fa-trash" aria-hidden="true"></i></a>
+                        <a th:href="@{/debug/sitiosEliminar/{id}  (id=${sitio.id})   }" th:text="'Eliminar'" onclick="return confirm('¿Estas seguro?. Se borrarán también todos los empleados, atracciones, reservas, turnos e incidencias asociados a este sitio.')" class="btn btn-danger" role="button" title="eliminar sitio"><i class="fas fa-trash" aria-hidden="true"></i></a>
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+
+            <nav th:replace="~{paginator-nav :: paginator}"></nav>
+
+        </div>
+    </div>
+    <hr>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
