--- a/debug/src/main/resources/templates/paginas/empleadosLista.html
+++ b/debug/src/main/resources/templates/paginas/empleadosLista.html
@@ -24,7 +24,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/debug/sitiosLista}">Ver sitios</a></li>
-                        <li><a class="dropdown-item" th:href="@{/debug/sitiosCrear}">Crear sitio</a></li>
+                        <li><a class="dropdown-item" href="#">Crear sitio</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -33,7 +33,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/debug/atraccionesLista}">Ver atracciones</a></li>
-                        <li><a class="dropdown-item" th:href="@{/debug/atraccionesCrear}">Crear atracción</a></li>
+                        <li><a class="dropdown-item" href="#">Crear atracción</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
@@ -42,16 +42,52 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/debug/empleadosLista}">Ver empleados</a></li>
-                        <li><a class="dropdown-item" th:href="@{/debug/empleadosCrear}">Crear empleado</a></li>
+                        <li><a class="dropdown-item" href="#">Crear empleado</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-<div th:if="${msg != null}" class="alert alert-success" role="alert">
-    <span th:text="${msg}"></span>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div class="container">
+    <div class="card">
+        <h2>Empleados</h2>
+        <div class="card-body">
+            <table class="table table-hover">
+                <thead class="thead-light">
+                <tr>
+                    <th scope="col">DNI</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Apellido</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Contraseña</th>
+                    <th scope="col">Sitio</th>
+                    <th scope="col">Gerente</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="empleado : ${listadoEmpleados}">
+                    <td th:text="${empleado.dni}"></td>
+                    <td th:text="${empleado.nombre}"></td>
+                    <td th:text="${empleado.apellido}"></td>
+                    <td th:text="${empleado.email}"></td>
+                    <td th:text="${empleado.password}"></td>
+                    <td th:text="${empleado.sitioID.id}"></td>
+                    <td th:text="${empleado.gerente}"></td>
+                    <td>
+                        <a th:href="@{/debug/empleadosEditar/{dni}  (dni=${empleado.dni})   }" th:text="'Editar'" class="btn btn-warning" role="button" title="editar empleado"><i class="fas fa-trash" aria-hidden="true"></i></a>
+                        <a th:href="@{/debug/empleadosEliminar/{dni}  (dni=${empleado.dni})   }" th:text="'Eliminar'" onclick="return confirm('¿Estas seguro?. Se borrarán también todos los turnos e incidencias asociados a este empleado.')" class="btn btn-danger" role="button" title="eliminar empleado"><i class="fas fa-trash" aria-hidden="true"></i></a>
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+
+            <nav th:replace="~{paginator-nav :: paginator}"></nav>
+
+        </div>
+    </div>
+    <hr>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
