--- a/debug/src/main/resources/templates/paginas/atraccionesForm.html
+++ b/debug/src/main/resources/templates/paginas/atraccionesForm.html
@@ -1,10 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" th:href="@{/debug}">Inicio</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Sitios
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/debug/sitiosLista}">Ver sitios</a></li>
+                        <li><a class="dropdown-item" th:href="@{/debug/sitiosCrear}">Crear sitio</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Atracciones
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/debug/atraccionesLista}">Ver atracciones</a></li>
+                        <li><a class="dropdown-item" th:href="@{/debug/atraccionesCrear}">Crear atracción</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Empleados
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/debug/empleadosLista}">Ver empleados</a></li>
+                        <li><a class="dropdown-item" th:href="@{/debug/empleadosCrear}">Crear empleado</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+<h2 th:text="${titulo}"></h2>
+<form th:action="@{/debug/atraccionesGuardar}" method="post"  th:object="${atraccion}">
+    <div class="mb-3">
+        <label for="nombre" class="form-label"> Nombre </label>
+        <input type="text" class="form-control" th:field="*{nombre}"  id="nombre" name="canombrelle" placeholder="Nombre de la atracción" required>
+    </div>
+    <div class="mb-3">
+        <label for="capacidad" class="form-label"> Capacidad </label>
+        <input type="number" class="form-control" th:field="*{capacidad}"  id="capacidad" name="capacidad" placeholder="Capacidad de la atracción" min="1" value="1" step="1" required>
+    </div>
+    <div class="mb-3">
+        <label for="locales">Local</label>
+        <select id="locales" name="local" th:field="*{sitioID}">
+            <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()}"></option>
+        </select>
+    </div>
+    <div class="mb-3">
+        <label for="precio" class="form-label"> Precio </label>
+        <input type="number" class="form-control" th:field="*{precio}"  id="precio" name="precio" placeholder="Precio de la atracción" min="1" value="1" step="0.01" required>
+    </div>
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <input type="hidden" th:field="*{id}" />
+</form>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
