--- a/tfg-frontend/src/main/resources/templates/paginas/actividadesReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/actividadesReserva.html
@@ -75,6 +75,7 @@
         </li>
     </ul>
 </div>
+<a class="btn btn-primary" th:href="@{/frontend/volverAtrasDatosReserva}" onclick="return confirm('Volver atrás te permitirá cambiar el número de personas, local y/o fecha de la reserva, pero perderás tu lista de actividades. ¿Quieres volver atrás?')">Volver atrás</a>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
