--- a/tfg-frontend/src/main/resources/templates/paginas/empleadosForm.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/empleadosForm.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/frontend}">Inicio</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/debug}">Inicio</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -46,49 +46,58 @@
                     </ul>
                 </li>
             </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/cerrarSesionEmpleado}">Cerrar sesión</a>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
-<div class="container">
-    <div class="card">
-        <h2>Empleados</h2>
-        <div class="card-body">
-            <table class="table table-hover">
-                <thead class="thead-light">
-                <tr>
-                    <th scope="col">DNI</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellido</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Contraseña</th>
-                    <th scope="col">Sitio</th>
-                    <th scope="col">Gerente</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="empleado : ${listadoEmpleados}">
-                    <td th:text="${empleado.dni}"></td>
-                    <td th:text="${empleado.nombre}"></td>
-                    <td th:text="${empleado.apellido}"></td>
-                    <td th:text="${empleado.email}"></td>
-                    <td th:text="${empleado.password}"></td>
-                    <td th:text="${empleado.sitioID.id}"></td>
-                    <td th:text="${empleado.gerente}"></td>
-                    <td>
-                        <a th:href="@{/frontend/empleadosEditar/{dni}  (dni=${empleado.dni})   }" th:text="'Editar'" class="btn btn-warning" role="button" title="editar empleado"><i class="fas fa-trash" aria-hidden="true"></i></a>
-                        <a th:href="@{/frontend/empleadosEliminar/{dni}  (dni=${empleado.dni})   }" th:text="'Eliminar'" onclick="return confirm('¿Estas seguro?. Se borrarán también todos los turnos e incidencias asociados a este empleado.')" class="btn btn-danger" role="button" title="eliminar empleado"><i class="fas fa-trash" aria-hidden="true"></i></a>
-                    </td>
-                </tr>
-
-                </tbody>
-            </table>
-
-            <nav th:replace="~{paginator-nav :: paginator}"></nav>
-
-        </div>
+<h2 th:text="${titulo}"></h2>
+<form th:action="@{/frontend/empleadosGuardar}" method="post"  th:object="${empleado}">
+    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
+        <span th:text="${msg}"></span>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
-    <hr>
-</div>
+    <div class="mb-3" th:if="${!editarEmpleado}">
+        <label for="dni" class="form-label"> DNI </label>
+        <input type="text" class="form-control" th:field="*{dni}"  id="dni" name="dni" placeholder="DNI del empleado" pattern="[0-9]{8}[A-Z]{1}" required>
+    </div>
+    <div class="mb-3">
+        <label for="nombre" class="form-label"> Nombre </label>
+        <input type="text" class="form-control" th:field="*{nombre}"  id="nombre" name="nombre" placeholder="Nombre del empleado" required>
+    </div>
+    <div class="mb-3">
+        <label for="apellido" class="form-label"> Apellido </label>
+        <input type="text" class="form-control" th:field="*{apellido}"  id="apellido" name="apellido" placeholder="Apellido del empleado" required>
+    </div>
+    <div class="mb-3">
+        <label for="email" class="form-label"> Email </label>
+        <input type="email" class="form-control" th:field="*{email}"  id="email" name="email" placeholder="Email corporativo del empleado" required>
+    </div>
+    <div class="mb-3">
+        <label for="password" class="form-label"> Contraseña </label>
+        <input type="text" class="form-control" th:field="*{password}"  id="password" name="password" placeholder="Contraseña del empleado" required>
+    </div>
+    <div class="mb-3">
+        <label for="locales">Local:</label>
+        <select id="locales" name="local" th:field="*{sitioID}">
+            <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()}"></option>
+        </select>
+    </div>
+    <div class="mb-3">
+        <label for="gerente" class="form-label"> Gerente </label>
+        <select id="gerente" name="gerente" th:field="*{gerente}">
+            <option th:value="${1}" th:text="${'Sí'}"></option>
+            <option th:value="${0}" th:text="${'No'}"></option>
+        </select>
+    </div>
+    <button type="submit" class="btn btn-primary">Guardar</button>
+    <div class="mb-3" th:if="${editarEmpleado}">
+        <input type="hidden" th:field="*{dni}" />
+    </div>
+</form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
