--- a/tfg-frontend/src/main/resources/templates/paginas/empleadosLista.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/empleadosLista.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/frontend}">Inicio</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/debug}">Inicio</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -44,6 +44,11 @@
                         <li><a class="dropdown-item" th:href="@{/frontend/empleadosLista}">Ver empleados</a></li>
                         <li><a class="dropdown-item" th:href="@{/frontend/empleadosCrear}">Crear empleado</a></li>
                     </ul>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/cerrarSesionEmpleado}">Cerrar sesión</a>
                 </li>
             </ul>
         </div>
