--- a/tfg-frontend/src/main/resources/templates/paginas/homeAdmin.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/homeAdmin.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" th:href="@{/frontend}">Inicio</a>
+                    <a class="nav-link active" aria-current="page" th:href="@{/frontend/debug}">Inicio</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -46,48 +46,17 @@
                     </ul>
                 </li>
             </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/frontend/cerrarSesionEmpleado}">Cerrar sesión</a>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
-<div class="container">
-    <div class="card">
-        <h2>Empleados</h2>
-        <div class="card-body">
-            <table class="table table-hover">
-                <thead class="thead-light">
-                <tr>
-                    <th scope="col">DNI</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellido</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Contraseña</th>
-                    <th scope="col">Sitio</th>
-                    <th scope="col">Gerente</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="empleado : ${listadoEmpleados}">
-                    <td th:text="${empleado.dni}"></td>
-                    <td th:text="${empleado.nombre}"></td>
-                    <td th:text="${empleado.apellido}"></td>
-                    <td th:text="${empleado.email}"></td>
-                    <td th:text="${empleado.password}"></td>
-                    <td th:text="${empleado.sitioID.id}"></td>
-                    <td th:text="${empleado.gerente}"></td>
-                    <td>
-                        <a th:href="@{/frontend/empleadosEditar/{dni}  (dni=${empleado.dni})   }" th:text="'Editar'" class="btn btn-warning" role="button" title="editar empleado"><i class="fas fa-trash" aria-hidden="true"></i></a>
-                        <a th:href="@{/frontend/empleadosEliminar/{dni}  (dni=${empleado.dni})   }" th:text="'Eliminar'" onclick="return confirm('¿Estas seguro?. Se borrarán también todos los turnos e incidencias asociados a este empleado.')" class="btn btn-danger" role="button" title="eliminar empleado"><i class="fas fa-trash" aria-hidden="true"></i></a>
-                    </td>
-                </tr>
-
-                </tbody>
-            </table>
-
-            <nav th:replace="~{paginator-nav :: paginator}"></nav>
-
-        </div>
-    </div>
-    <hr>
+<div th:if="${msg != null}" class="alert alert-success" role="alert">
+    <span th:text="${msg}"></span>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
